docs/k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: passbook-docs-http
  namespace: prod-passbook-docs
  labels:
    app.kubernetes.io/name: passbook-docs
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: passbook-docs
